--- a/youtube.html
+++ b/youtube.html
@@ -3,19 +3,31 @@
   <head>
     <title>YouTube.com Clone</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
     <style>
+      p {
+        font-family: Roboto, Arial;
+        margin-top: 0;
+        margin-bottom: 0;
+      }
 
       .search-bar {   
         display: block;
     }
 
-      .thumbnail {
-        width: 300px; /*will automatically adjust height to keep its shape - otherwise use object fit and object position if you set a width, so you can adjust which part of the image is seen*/
-        display:block; /*makes the thumbnail take up the whole line, pushing anything else to the next line*/
+      .video-title {
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 20px;
+        margin-bottom: 12px;
       }
 
-      .video-title {
-        width: 300px;
+      .thumbnail {
+        width: 300px; /*will automatically adjust height to keep its shape - otherwise use object fit and object position if you set a width, so you can adjust which part of the image is seen*/
+        display: block; /*makes the thumbnail take up the whole line, pushing anything else to the next line*/
       }
 
       .video-preview {
@@ -25,6 +37,35 @@
         margin-right: 10px;
       }
 
+      .channel-picture {
+        display: inline-block; /*div element - width still needs to be changed or it will still take up 100% of the space*/
+        width: 50px;
+        vertical-align: top;
+      }
+
+      .video-info {
+        display: inline-block;
+        width: 200px;
+      }
+
+      .profile-picture {
+        width: 40px;
+        border-radius: 50px;     
+      }
+
+      .thumbnail-row {
+        margin-bottom:12px;
+      }
+
+      .video-author, .video-stats {
+        font-size: 12px;
+        color: rgb(96, 96, 96);
+      }
+
+      .video-author {
+        margin-bottom: 4px;
+      }
+      
     </style>
 
   </head>
@@ -33,30 +74,50 @@
     <input class="search-bar" type="text" placeholder="Search"> <!--example of inline block element -->
 
     <div class="video-preview">
-      <img class="thumbnail" src="thumbnails/thumbnail-1.webp"> <!--example of inline block element which only takes up as much space as needed-->
-      <p class="video-title"> <!--block element by default and takes up a whole line, unless changed in css -->
-        Talking Tech and AI with Google CEO Sundar Pichai!
-      </p>
-      <p class="video-author">
-        Marques Brownlee
-      </p>
-      <p class="video-stats">
-        3.4M views &#183; 6 months ago
-      </p>
+      <div class="thumbnail-row">
+        <img class="thumbnail" src="thumbnails/thumbnail-1.webp"> <!--example of inline block element which only takes up as much space as needed-->
+      </div>
+      <div>      
+        <div class="channel-picture">
+          <img class="profile-picture" src="channel-pictures/channel-1.jpeg"> <!--images overflow by default and will need adjusting to fit the column-->
+        </div>
+        <div class ="video-info">
+          <p class="video-title"> <!--block element by default and takes up a whole line or the whole space within a block, unless changed in css -->
+            Talking Tech and AI with Google CEO Sundar Pichai!
+          </p>
+          <p class="video-author">
+            Marques Brownlee
+          </p>
+          <p class="video-stats">
+            3.4M views &#183; 6 months ago
+          </p>
+        </div>
+      </div>
     </div>
 
     <div class="video-preview">
-      <img class="thumbnail" src="thumbnails/thumbnail-2.webp"> <!--example of inline block element which only takes up as much space as needed-->
-      <p class="video-title"> <!--block element by default and takes up a whole line, unless changed in css -->
-        Try Not To Laugh Challenge #9
-      </p>
-      <p class="video-author">
-        Markiplier
-      </p>
-      <p class="video-stats">
-        19M views &#183; 4 years ago
-      </p>
+      <div class="thumbnail-row">
+        <img class="thumbnail" src="thumbnails/thumbnail-2.webp"> <!--example of inline block element which only takes up as much space as needed-->
+      </div>
+      <div>      
+        <div class="channel-picture">
+          <img class="profile-picture" src="channel-pictures/channel-2.jpeg"> <!--images overflow by default and will need adjusting to fit the column-->
+        </div>
+        <div class ="video-info">
+          <p class="video-title"> <!--block element by default and takes up a whole line or the whole space within a block, unless changed in css -->
+            Try Not To Laugh Challenge #9
+          </p>
+          <p class="video-author">
+            Markiplier
+          </p>
+          <p class="video-stats">
+            19M views &#183; 4 years ago
+          </p>
+        </div>
+      </div>
     </div>
+
+
 
   </body>
 </html>
